--- a/messages.css
+++ b/messages.css
@@ -8,10 +8,20 @@ body{
     display: flex;
     width: 100%;
 }
-.botones{
-    width: 10vw;
-    height: 100%;
+.iconos{
+    display: flex;
+    flex-direction:column;
     margin-bottom: 5px;
+    margin-top: auto;
+    padding: 5px;
+}
+.btn{
+    margin: 5px;
+    height: 7vh;
+    width: 7vw;
+    background-color: #222222;
+    color: white;
+    text-overflow: clip;
 }
 .mensajes{
     width: 100%;
